// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`artworks controller DELETE endpoints deleteArtworks should respond with status 200 and correct body 1`] = `
{
  "acknowledged": true,
  "deletedCount": 2,
}
`;

exports[`artworks controller GET endpoints getArtwork should respond with status 200 and correct body 1`] = `
{
  "artwork": {
    "__v": 0,
    "_id": "66ce0bf156199c1b8df5db7d",
    "categories": [
      {
        "name": "Title",
        "subcategories": [],
        "value": "Title",
      },
    ],
    "collectionName": "collection",
    "createdAt": "2024-09-10T12:17:12.821Z",
    "updatedAt": "2024-09-10T12:17:12.821Z",
  },
}
`;

exports[`artworks controller GET endpoints getArtworksBySearchTextMatchedInTopmostCategory should respond with status 200 and correct body 1`] = `
{
  "artworks": [
    {
      "__v": 0,
      "_id": "680d3aaa071644252a168caa",
      "categories": [
        {
          "name": "Tytuł",
          "subcategories": [],
          "value": "Searched Text",
        },
      ],
      "collectionName": "collection",
      "createdAt": "2025-04-26T19:57:30.007Z",
      "updatedAt": "2025-04-26T19:57:30.007Z",
    },
  ],
  "total": 1,
}
`;

exports[`artworks controller GET endpoints getArtworksForPage should respond with status 200 and correct body - advanced search 1`] = `
{
  "artworks": [
    {
      "__v": 0,
      "_id": "66ce0bf156199c1b8df5db7d",
      "categories": [
        {
          "name": "Tytuł",
          "subcategories": [],
          "value": "testowy",
        },
      ],
      "collectionName": "collection",
      "createdAt": "2024-10-22T20:12:12.209Z",
      "updatedAt": "2024-10-22T20:12:12.209Z",
    },
  ],
  "currentPage": 1,
  "pageSize": 10,
  "total": 1,
}
`;

exports[`artworks controller GET endpoints getArtworksForPage should respond with status 200 and correct body - no filtering 1`] = `
{
  "artworks": [
    {
      "__v": 0,
      "_id": "66ce0bf156199c1b8df5db7d",
      "categories": [
        {
          "name": "Tytuł",
          "subcategories": [],
          "value": "testowy",
        },
      ],
      "collectionName": "collection",
      "createdAt": "2024-10-22T20:12:12.209Z",
      "updatedAt": "2024-10-22T20:12:12.209Z",
    },
  ],
  "currentPage": 1,
  "pageSize": 10,
  "total": 1,
}
`;

exports[`artworks controller GET endpoints getArtworksForPage should respond with status 200 and correct body - quicksearch 1`] = `
{
  "artworks": [
    {
      "__v": 0,
      "_id": "66ce0bf156199c1b8df5db7d",
      "categories": [
        {
          "name": "Tytuł",
          "subcategories": [],
          "value": "testowy",
        },
      ],
      "collectionName": "collection",
      "createdAt": "2024-10-22T20:12:12.209Z",
      "updatedAt": "2024-10-22T20:12:12.209Z",
    },
  ],
  "currentPage": 1,
  "pageSize": 10,
  "total": 1,
}
`;

exports[`artworks controller GET endpoints getArtworksForPage should respond with status 200 and correct body - token not verified 1`] = `
{
  "artworks": [
    {
      "__v": 0,
      "_id": "66ce0bf156199c1b8df5db7d",
      "categories": [
        {
          "name": "Tytuł",
          "subcategories": [],
          "value": "testowy",
        },
      ],
      "collectionName": "collection",
      "createdAt": "2024-10-22T20:12:12.209Z",
      "updatedAt": "2024-10-22T20:12:12.209Z",
    },
  ],
  "currentPage": 1,
  "pageSize": 10,
  "total": 1,
}
`;

exports[`artworks controller POST endpoints createArtwork should respond with status 201 and correct body 1`] = `
{
  "artwork": {
    "__v": 0,
    "_id": "66ce0bf156199c1b8df5db7d",
    "categories": [
      {
        "name": "Title",
        "subcategories": [],
        "value": "Title",
      },
    ],
    "collectionName": "collection",
    "createdAt": "2024-08-27T17:25:05.352Z",
    "files": [
      {
        "_id": "68610d6315370d23b553524e",
        "filePath": "uploads/685f7329d533636e3b130f86/66ce0bf156199c1b8df5db7d_0.mid",
        "newFilename": "66ce0bf156199c1b8df5db7d_0.mid",
        "originalFilename": "FileForUpload.mid",
        "size": 8444,
        "uploadedAt": "2025-06-29T09:54:43.477Z",
      },
      {
        "_id": "68610d6315370d23b553524f",
        "filePath": "uploads/685f7329d533636e3b130f86/66ce0bf156199c1b8df5db7d_1.mid",
        "newFilename": "66ce0bf156199c1b8df5db7d_1.mid",
        "originalFilename": "FileForUpload2.mid",
        "size": 8444,
        "uploadedAt": "2025-06-29T09:54:43.479Z",
      },
    ],
    "updatedAt": "2024-08-27T17:25:05.352Z",
  },
  "failedUploadsCauses": [],
  "failedUploadsCount": 0,
  "uploadedFilesCount": 2,
}
`;

exports[`artworks controller PUT endpoints editArtwork should respond with status 201 and correct body 1`] = `
{
  "deletedFilesCount": 1,
  "failedDeletesCauses": [],
  "failedDeletesCount": 0,
  "failedUploadsCauses": [],
  "failedUploadsCount": 0,
  "updatedArtwork": {
    "__v": 1,
    "_id": "66ce0bf156199c1b8df5db7d",
    "categories": [
      {
        "name": "Title",
        "subcategories": [],
        "value": "Title",
      },
    ],
    "collectionName": "collection",
    "createdAt": "2025-07-07T19:10:54.938Z",
    "files": [
      {
        "_id": "68610d6315370d23b553524e",
        "filePath": "uploads/685f7329d533636e3b130f86/66ce0bf156199c1b8df5db7d_1.mid",
        "newFilename": "66ce0bf156199c1b8df5db7d_1.mid",
        "originalFilename": "FileForUpload2.mid",
        "size": 8444,
        "uploadedAt": "2025-06-29T09:54:43.477Z",
      },
      {
        "_id": "68610d6315370d23b553524f",
        "filePath": "uploads/685f7329d533636e3b130f86/66ce0bf156199c1b8df5db7d_2.mid",
        "newFilename": "66ce0bf156199c1b8df5db7d_2.mid",
        "originalFilename": "FileForUpload3.mid",
        "size": 8444,
        "uploadedAt": "2025-06-29T09:54:43.479Z",
      },
    ],
    "updatedAt": "2025-07-07T19:10:54.982Z",
  },
  "uploadedFilesCount": 2,
}
`;
